crates/squawk_parser/src/snapshots/parser__test__create_tablespace_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/create_tablespace.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_TABLESPACE_STMT
    CREATE_KW "create"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    NAME
      IDENT "t"
    WHITESPACE " "
    LOCATION_KW "location"
    WHITESPACE " "
    LITERAL
      STRING "''"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_TABLESPACE_STMT
    CREATE_KW "create"
    WHITESPACE " "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    NAME
      IDENT "t"
    WHITESPACE " \n  "
    OWNER_KW "owner"
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
    WHITESPACE "\n  "
    LOCATION_KW "location"
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE "\n  "
    CONSTRAINT_STORAGE_PARAMS
      WITH_KW "with"
      WHITESPACE " "
      L_PAREN "("
      WHITESPACE "\n    "
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "seq_page_cost"
      WHITESPACE " "
      EQ "="
      WHITESPACE " "
      LITERAL
        INT_NUMBER "10"
      COMMA ","
      WHITESPACE "\n    "
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "random_page_cost"
      WHITESPACE " "
      EQ "="
      WHITESPACE " "
      LITERAL
        INT_NUMBER "1"
      COMMA ","
      WHITESPACE "\n    "
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "effective_io_concurrency"
      WHITESPACE " "
      EQ "="
      WHITESPACE " "
      LITERAL
        INT_NUMBER "0"
      COMMA ","
      WHITESPACE "\n    "
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "maintenance_io_concurrency"
      WHITESPACE " "
      EQ "="
      WHITESPACE " "
      LITERAL
        INT_NUMBER "4"
      WHITESPACE "\n  "
      R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
