crates/squawk_parser/src/snapshots/parser__test__create_text_search_dict_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/create_text_search_dict.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_TEXT_SEARCH_PARSER_STMT
    CREATE_KW "create"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME
          NAME_KW "name"
    WHITESPACE " "
    L_PAREN "("
    WHITESPACE "\n  "
    NAME
      TEMPLATE_KW "template"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "t"
    WHITESPACE "\n"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_TEXT_SEARCH_PARSER_STMT
    CREATE_KW "create"
    WHITESPACE " "
    TEXT_KW "text"
    WHITESPACE " "
    SEARCH_KW "search"
    WHITESPACE " "
    DICTIONARY_KW "dictionary"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "foo"
      DOT "."
      PATH_SEGMENT
        NAME
          NAME_KW "name"
    WHITESPACE " "
    L_PAREN "("
    WHITESPACE "\n  "
    NAME
      TEMPLATE_KW "template"
    WHITESPACE "  "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "t"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "foo"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "bar"
    COMMA ","
    WHITESPACE "\n  "
    NAME
      IDENT "a"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    PATH_TYPE
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "b"
    WHITESPACE "\n"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
